# AlgLabs

./: .gitignore  README.md  lab7.txt
OSIS/: cpufreq.txt  script.sh
OSIS/listdir/: listdir.txt
OSISprogram/: CMakeLists.txt  main.cpp
example/: Cargo.toml
lab07/: lab7.docx  lab7v1.vsdx  lab7v2.vsdx
lab08/: lab8.txt  lab8v34.vsdx
lab09/: lab9.txt  lab9v5.vsdx
lab10/: lab10.docx  lab10.txt  lab10v2.vsdx  lab10v3.vsdx  lab10v4.vsdx
lab11/: lab11.txt
lab12/: lab12.docx
lab13/: lab13.txt  lab13.vsdx
lab15/: lab15.docx
lab16/: Cargo.toml
lab16++/: CMakeLists.txt  db.csv  lab16++(beta).docx  lab16++.docx  main.cpp  module.cpp  module.h  module1.cpp  module2.cpp  module3.cpp  module4.cpp  module5.cpp  module6.cpp  module7.cpp  module8.cpp
lab17/: lab17.docx
lab18/: lab18.docx  main.cpp  maze.ipynb  stack.cpp  stack.h
lab19/: lab19.docx
lab19.5/: lab19.5.docx  lab19.5.tex  lab20.tex  main.cpp
lab19v3/: main.cpp
lab2/: CMakeLists.txt
lab20/: lab20.docx  main.cpp
lab21/: lab21.docx  main.cpp
lab22/: lab22.docx
lab23/: lab23.docx
lab3alg/: CMakeLists.txt  gavno.sss  main.cpp
lab5/: CMakeLists.txt
lab5alg/: main — копия (2).cpp  main — копия.cpp  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab6v1/: CMakeLists.txt
lab6v2/: CMakeLists.txt  main.cpp
lab6v3/: CMakeLists.txt  main.cpp
lab6v4/: CMakeLists.txt  main.cpp
lab6v5/: main.cpp
lab7/: lab7v1.vsdx  lab7v3.vsdx  lab7v4.vsdx
lab7v1/: CMakeLists.txt  main.cpp
lab7v2/: CMakeLists.txt  main.cpp
lab7v4/: CMakeLists.txt
lab8/: lab8.txt
lab9/: lab9.txt
(+96 files in other folders)
